Set the data path of StoragePartition correctly.

https://crrev.com/1737933002 accidentally changed the path which is used while
initializing IndexedDBContextImpl, CacheStorageContextImpl,
ServiceWorkerContextWrapper, WebRTCIdentityStore and
PlatformNotificationContextImpl.

This |path| must be |partition_path| when |in_memory| is false.

BUG=598314,586194

Review URL: https://codereview.chromium.org/1844843004

Cr-Commit-Position: refs/heads/master@{#384829}

Former-commit-id: 4ee3cce199999c1b21c7cdf9d3f0e19cbc752e1b